fix: chat__welcomeMessageBackground align items center

--- a/src/pages/App/app.module.css
+++ b/src/pages/App/app.module.css
@@ -36,6 +36,7 @@
   height: 100svh;
   overflow: hidden;
   width: 100%;
+  text-align: center;
 }
 
 .chat__actionsInUserOrGroup {
